# UNFCCC_non-AnnexI_data

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  DI_reading.dia  LICENCE  Makefile  README.md  dodo.py  pyproject.toml  setup.cfg
.datalad/: config
.github/: release_template.md
.github/ISSUE_TEMPLATE/: country-data-template-non-annexi.md
.github/workflows/: bump.yaml  ci.yaml  install.yaml  release.yaml
075/23f/: MD5E-s9425210--35c122694873156a1298d9e7a8cf0576.zip.log.web
0c8/77f/: MD5E-s1291947--8936ddaf05e8560b098691471148be48.csv.log.web
12b/55d/: MD5E-s1250119--c234d46e3ccad29883aa811342b5c63d.0.xlsx.log.web
15a/a0f/: MD5E-s52415872--54c09ff55a2ea0f05f9ef7c63d3caf47.pdf.log.web
256/36f/: MD5E-s443178--f16e77072b6805100bd2659a98f6adfa.zip.log.web
301/94f/: MD5E-s72003--67147bb156227a35ea07939a59677d08.xlsx.log.web
302/b4a/: MD5E-s1578237--cf40680ed81352a7c96ee6b893433942.xlsx.log.web
3b3/f92/: MD5E-s4820317--7578bf54fecd89effa51ebaf7a7af185.pdf.log.web
424/d4c/: MD5E-s11949109--fc81798ece743acba960d6c6fd6f22ef.pdf.log.web
459/c25/: MD5E-s11216--8470efddb7c119c4f2c06de80fd65fbc.zip.log.web
479/a04/: MD5E-s10848256--c6cbcf7fda2683b035d32e93ae1a2ece.pdf.log.web
582/d51/: MD5E-s7107376--198f0d2b3ec96cdb8daef51479868f7d.xlsx.log.web
70d/30e/: MD5E-s4854219--4edc4db66ce13dce2f72bfa7b0e198be.pdf.log.web
8da/b3d/: MD5E-s1011375--89e0d0daff96d6c124fd54a9bfed0f9c.pdf.log.web
8e4/0d0/: MD5E-s39185--4f7df1b047d4b5b170a7d724c4994c49.pdf.log.web
977/deb/: MD5E-s81707--75bde5e9e3e29a8ea4a1bfdd56df357a.zip.log.web
982/ac1/: MD5E-s16621762--342181fe9559ef7cdc46ba9b58c285bb.pdf.log.web
9d4/35e/: MD5E-s142197--509422cad8fac13f2ed7aceb2a176c77.zip.log.web
9f4/812/: MD5E-s3720119--ea67b24dc0063bccf54de1c77aa6a99f.pdf.log.web
UNFCCC_GHG_data/: __init__.py
UNFCCC_GHG_data/UNFCCC_CRF_reader/: CRF_raw_for_year.py  UNFCCC_CRF_reader_core.py  UNFCCC_CRF_reader_devel.py  UNFCCC_CRF_reader_prod.py  __init__.py  read_UNFCCC_CRF_submission.py  read_UNFCCC_CRF_submission_datalad.py  read_new_UNFCCC_CRF_for_year.py  read_new_UNFCCC_CRF_for_year_datalad.py  test_read_UNFCCC_CRF_for_year.py  util.py
UNFCCC_GHG_data/UNFCCC_DI_reader/: UNFCCC_DI_reader_config.py  UNFCCC_DI_reader_core.py  UNFCCC_DI_reader_datalad.py  UNFCCC_DI_reader_helper.py  UNFCCC_DI_reader_io.py  UNFCCC_DI_reader_proc.py  __init__.py  process_UNFCCC_DI_for_country.py  process_UNFCCC_DI_for_country_datalad.py  process_UNFCCC_DI_for_country_group.py  process_UNFCCC_DI_for_country_group_datalad.py  read_UNFCCC_DI_for_country.py  read_UNFCCC_DI_for_country_datalad.py  read_UNFCCC_DI_for_country_group.py  read_UNFCCC_DI_for_country_group_datalad.py  util.py
UNFCCC_GHG_data/UNFCCC_downloader/: __init__.py  download_annexI.py  download_btr.py  download_ndc.py  download_non-annexI.py  fetch_submissions_annexI.py  fetch_submissions_btr.py  fetch_submissions_bur.py  fetch_submissions_nc.py  unfccc_submission_info.py
UNFCCC_GHG_data/UNFCCC_reader/: __init__.py  country_info.py  folder_mapping.json  folder_mapping.py  get_submissions_info.py  read_UNFCCC_submission.py
UNFCCC_GHG_data/helper/: __init__.py  country_info.py  definitions.py  folder_mapping.py  functions.py  functions_temp.py
a2c/177/: MD5E-s7522813--a03711d54f4e44d0ab0899c5a7dad772.xlsx.log.web
a68/cf6/: MD5E-s10644515--302ad3030d9241f2db460fe930e0ee15.pdf.log.web
a6f/96c/: MD5E-s989657--65f518ff63a3911fba2c5a9f2bfba392.pdf.log.web
b06/d42/: MD5E-s362800--e26b798635b7cbdcd9d70f1101ac6a48.zip.log.web
b87/c94/: MD5E-s16270--bc9587dd3d0864da01c877d0c8267856.zip.log.web
c73/924/: MD5E-s1721154--6ae366831b31be85bf2dd5b66d0a69ab.pdf.log.web
c8b/34b/: MD5E-s349277--b2003fdc3154ba96a931a6fd442ca009.zip.log.web
cd7/80b/: MD5E-s44506505--0b2541b974ecc11fcbdad969c244ec26.1.xlsx.log.web
changelog/: 141.feature.md  141.fix.md  141.improvement.md  142.improvement.md  146.data.md  146.improvement.md  147.fix.md  147.improvement.md  153.data.md  155.data.md  155.improvement.md  161.feature.md  162.fix.md  163.fix.md  168.data.md  168.docs.md  168.fix.md  168.improvement.md  173.data.md  178.data.md  180.data.md  README.md
code/: requirements.txt
code/UNFCCC_CRF_reader/: CRF_raw_for_year.py  UNFCCC_CRF_reader.py  UNFCCC_CRF_reader_core.py  UNFCCC_CRF_reader_devel.py  UNFCCC_CRF_reader_prod.py  __init__.py  read_UNFCCC_CRF_submission.py  read_UNFCCC_CRF_submission_datalad.py  read_new_UNFCCC_CRF_for_year.py  read_new_UNFCCC_CRF_for_year_datalad.py  test_read_UNFCCC_CRF_for_year.py  util.py  utils.py
code/UNFCCC_DI_reader/: UNFCCC_DI_reader_config.py  UNFCCC_DI_reader_core.py  __init__.py  read_UNFCCC_DI_country_datalad.py  read_UNFCCC_DI_for_country.py  util.py
code/UNFCCC_downloader/: download_annexI.py  download_bur.py  download_nc.py  download_non-annexI.py  fetch_submissions_annexI.py  fetch_submissions_bur.py  fetch_submissions_nc.py  unfccc_submission_info.py
code/UNFCCC_reader/: country_info.py  folder_mapping.json  get_submissions_info.py  read_UNFCCC_submission.py
d5d/ae0/: MD5E-s2058129--cef762f753f7e1758eace417c056f412.zip.log.web
d5f/d22/: MD5E-s1809--6b04f7ef34130c81d38e5647ac400758.zip.log.web
d81/0c6/: MD5E-s16981447--1e21f2436265559441f9a46eb7b17f73.pdf.log.web
datasets/UNFCCC/: no_updates_until.txt
docs/source/: changelog.md  conf.py  contribution.md  data_format.md  development.md  index.md  notebooks.md  repository_structure.md  usage.md
downloaded_data/UNFCCC/: 00_new_downloads_BTR1-2024-05-03.csv  00_new_downloads_BTR1-2024-09-01.csv  00_new_downloads_BTR1-2024-10-09.csv  00_new_downloads_BTR1-2024-10-29.csv  00_new_downloads_BTR1-2024-12-09.csv  00_new_downloads_BTR1-2024-12-12.csv  00_new_downloads_BTR1-2024-12-16.csv  00_new_downloads_BTR1-2024-12-17.csv  00_new_downloads_BTR1-2024-12-18.csv  00_new_downloads_BTR1-2025-01-06.csv  00_new_downloads_BTR1-2025-01-08.csv  00_new_downloads_BTR1-2025-01-14.csv  00_new_downloads_BTR1-2025-01-29.csv  00_new_downloads_BTR1-2025-02-03.csv  (+126 more)
notebooks/: read_CTF.ipynb
scripts/: test-install.py
tests/: conftest.py
(+22310 files in other folders)
