[metadata]
name = UNFCCC_GHG_data
version = 0.2
author = Johannes Gütschow
author_email = mail@johannes-guetschow.de
description = Tools to read GHG data submitted to the UNFCCC using various methods
long_description = file: README.md
long_description_content_type = text/md
url = https://github.com/JGuetschow/UNFCCC_non-AnnexI_data
#project_urls =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache Software License 2.0
license_file = LICENSE

[options]
packages =
    UNFCCC_GHG_data
    UNFCCC_GHG_data.UNFCCC_CRF_reader
    UNFCCC_GHG_data.UNFCCC_CRF_reader.crf_specifications
    UNFCCC_GHG_data.UNFCCC_reader
    UNFCCC_GHG_data.UNFCCC_downloader
    UNFCCC_GHG_data.UNFCCC_DI_reader
    UNFCCC_GHG_data.helper
    #UNFCCC_GHG_data.datasets
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    bs4
    requests
    pandas
    selenium
    primap2
    countrynames
    pycountry
    datalad
    treelib
    camelot-py
    opencv-python
    ghostscript
    unfccc_di_api >=4.0.0
    dask

[options.extras_require]
dev =
    pip
    wheel
    bs4
    requests
    pandas
    selenium
    primap2
    countrynames
    pycountry
    datalad
    treelib
    camelot-py
    opencv-python
    ghostscript
    ipykernel
    jupyter
    dask
    ipympl


[options.package_data]
* =
    *.csv
    *.nc
